[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/interface/menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/window_frame.png" type="Texture" id=2]
[ext_resource path="res://characters/cat/character.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -275.0
margin_right = 185.0
margin_bottom = 275.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
__meta__ = {
"_edit_lock_": true
}

[node name="character" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
position = Vector2( 195, 127.4 )
rotation = -3.14159
scale = Vector2( 0.169, -0.169 )

[node name="btn_continue" type="Button" parent="."]
margin_left = 40.0
margin_top = 185.0
margin_right = 335.0
margin_bottom = 255.0
text = "CONTINUE"

[node name="btn_stats" type="Button" parent="."]
margin_left = 40.0
margin_top = 275.0
margin_right = 335.0
margin_bottom = 345.0
text = "STATS"

[node name="btn_mainmenu" type="Button" parent="."]
margin_left = 40.0
margin_top = 365.0
margin_right = 335.0
margin_bottom = 435.0
text = "MAIN MENU"

[node name="btn_sound" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 465.0
margin_right = 88.0
margin_bottom = 513.0
texture_normal = ExtResource( 4 )
expand = true

[node name="btn_fullscr" type="TextureButton" parent="."]
margin_left = 285.0
margin_top = 465.0
margin_right = 333.0
margin_bottom = 513.0
texture_normal = ExtResource( 4 )
expand = true

